name: swarm-common
version: 0.1.0.0
synopsis: Types and utilities shared by swarm packages
homepage: http://github.com/drdo/swarm-common
license: MIT
license-file: LICENSE
author: Daniel Rebelo de Oliveira
maintainer: drdo@drdo.eu
category: Network
build-type: Simple
cabal-version: >=1.10
library
  exposed-modules: Network.BitTorrent.Types
  default-language: Haskell2010
  other-extensions: DeriveGeneric,
                    GeneralizedNewtypeDeriving,
                    UnicodeSyntax
  build-depends: base >=4.7 && <5,
                 binary >=0.7,
                 bytestring >=0.10,
                 lens >=2.0,
                 network >=2.0,
                 swarm-bencode >=0.1,
                 vector >=0.7
